--- a/platform-api-client-gwt/codenvy-api-workspace-gwt-client/pom.xml
+++ b/platform-api-client-gwt/codenvy-api-workspace-gwt-client/pom.xml
@@ -27,13 +27,13 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.codenvy.platform-api</groupId>
+            <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-api-core</artifactId>
             <version>${codenvy.platform-api.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>com.codenvy.platform-api</groupId>
+            <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-api-workspace</artifactId>
             <version>${codenvy.platform-api.version}</version>
         </dependency>
@@ -75,7 +75,7 @@
         </resources>
         <plugins>
             <plugin>
-                <groupId>com.codenvy.platform-api</groupId>
+                <groupId>org.eclipse.che.core</groupId>
                 <artifactId>codenvy-dto-maven-plugin</artifactId>
                 <version>${codenvy.platform-api.version}</version>
                 <executions>
@@ -88,12 +88,12 @@
                 </executions>
                 <dependencies>
                     <dependency>
-                        <groupId>com.codenvy.platform-api</groupId>
+                        <groupId>org.eclipse.che.core</groupId>
                         <artifactId>codenvy-api-core</artifactId>
                         <version>${codenvy.platform-api.version}</version>
                     </dependency>
                     <dependency>
-                        <groupId>com.codenvy.platform-api</groupId>
+                        <groupId>org.eclipse.che.core</groupId>
                         <artifactId>codenvy-api-workspace</artifactId>
                         <version>${codenvy.platform-api.version}</version>
                     </dependency>
