--- a/ide/pom.xml
+++ b/ide/pom.xml
@@ -59,7 +59,7 @@
         <pluginManagement>
             <plugins>
                 <plugin>
-                    <groupId>com.codenvy.platform-api</groupId>
+                    <groupId>org.eclipse.che.core</groupId>
                     <artifactId>codenvy-dto-maven-plugin</artifactId>
                     <version>${codenvy.platform-api.version}</version>
                 </plugin>
