--- a/platform-api-client-gwt/codenvy-api-vfs-gwt-client/pom.xml
+++ b/platform-api-client-gwt/codenvy-api-vfs-gwt-client/pom.xml
@@ -26,7 +26,7 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>com.codenvy.platform-api</groupId>
+            <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-api-vfs</artifactId>
             <version>${codenvy.platform-api.version}</version>
         </dependency>
@@ -56,7 +56,7 @@
         </resources>
         <plugins>
             <plugin>
-                <groupId>com.codenvy.platform-api</groupId>
+                <groupId>org.eclipse.che.core</groupId>
                 <artifactId>codenvy-dto-maven-plugin</artifactId>
                 <version>${codenvy.platform-api.version}</version>
                 <executions>
@@ -69,7 +69,7 @@
                 </executions>
                 <dependencies>
                     <dependency>
-                        <groupId>com.codenvy.platform-api</groupId>
+                        <groupId>org.eclipse.che.core</groupId>
                         <artifactId>codenvy-api-vfs</artifactId>
                         <version>${codenvy.platform-api.version}</version>
                     </dependency>
