--- a/platform-api-client-gwt/codenvy-gwt-client-commons/pom.xml
+++ b/platform-api-client-gwt/codenvy-gwt-client-commons/pom.xml
@@ -26,12 +26,12 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>com.codenvy.platform-api</groupId>
+            <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-api-workspace</artifactId>
             <version>${codenvy.platform-api.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.codenvy.platform-api</groupId>
+            <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-dto</artifactId>
             <version>${codenvy.platform-api.version}</version>
         </dependency>
