--- a/platform-api/codenvy-api-docs/pom.xml
+++ b/platform-api/codenvy-api-docs/pom.xml
@@ -15,23 +15,13 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>codenvy-platform-api-parent</artifactId>
-        <groupId>com.codenvy.platform-api</groupId>
-        <version>0.34.0-SNAPSHOT</version>
+        <groupId>org.eclipse.che.core</groupId>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>codenvy-api-docs</artifactId>
     <packaging>jar</packaging>
     <name>Codenvy API Docs</name>
     <dependencies>
-        <dependency>
-            <groupId>org.eclipse.che.core</groupId>
-            <artifactId>codenvy-commons-inject</artifactId>
-            <version>${codenvy.commons.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.codenvy.platform-api</groupId>
-            <artifactId>codenvy-api-core</artifactId>
-            <version>${project.version}</version>
-        </dependency>
         <dependency>
             <groupId>com.wordnik</groupId>
             <artifactId>swagger-jaxrs_2.10</artifactId>
@@ -42,6 +32,16 @@
                     <groupId>javax.ws.rs</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.che.core</groupId>
+            <artifactId>codenvy-api-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.che.core</groupId>
+            <artifactId>codenvy-commons-inject</artifactId>
+            <version>${che.core.version}</version>
         </dependency>
     </dependencies>
 </project>
