--- a/platform-api/codenvy-dto-maven-plugin/pom.xml
+++ b/platform-api/codenvy-dto-maven-plugin/pom.xml
@@ -15,22 +15,22 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>codenvy-platform-api-parent</artifactId>
-        <groupId>com.codenvy.platform-api</groupId>
-        <version>0.34.0-SNAPSHOT</version>
+        <groupId>org.eclipse.che.core</groupId>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>codenvy-dto-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <name>Codenvy DTO Maven Plugin</name>
     <dependencies>
         <dependency>
-            <groupId>com.codenvy.platform-api</groupId>
-            <artifactId>codenvy-dto</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
             <version>${maven.plugin-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.che.core</groupId>
+            <artifactId>codenvy-dto</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
