--- a/platform-api/pom.xml
+++ b/platform-api/pom.xml
@@ -14,13 +14,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.eclipse.che.core</groupId>
         <artifactId>che-core-parent</artifactId>
+        <groupId>org.eclipse.che.core</groupId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
-    <groupId>com.codenvy.platform-api</groupId>
     <artifactId>codenvy-platform-api-parent</artifactId>
-    <version>0.34.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Codenvy API Parent</name>
     <modules>
@@ -40,28 +39,8 @@
         <module>codenvy-api-auth</module>
         <module>codenvy-infrastructure-local</module>
     </modules>
-    <scm>
-        <connection>scm:git:git@github.com:codenvy/platform-api.git</connection>
-        <developerConnection>scm:git:git@github.com:codenvy/platform-api.git</developerConnection>
-        <tag>HEAD</tag>
-        <url>https://fisheye.codenvycorp.com/browse/platform-api</url>
-    </scm>
     <properties>
         <maven.model.version>3.0.5</maven.model.version>
         <specification.version>1.0-beta2</specification.version>
     </properties>
-    <repositories>
-        <repository>
-            <id>codenvy-public-repo</id>
-            <name>codenvy public</name>
-            <url>https://maven.codenvycorp.com/content/groups/public/</url>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>codenvy-public-repo</id>
-            <name>codenvy public</name>
-            <url>https://maven.codenvycorp.com/content/groups/public/</url>
-        </pluginRepository>
-    </pluginRepositories>
 </project>
