--- a/security/codenvy-security-oauth1-bitbucket/pom.xml
+++ b/security/codenvy-security-oauth1-bitbucket/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-commons-inject</artifactId>
-            <version>${codenvy.commons.version}</version>
+            <version>${che.core.version}</version>
         </dependency>
         <dependency>
             <groupId>com.codenvy.security</groupId>
