--- a/security/codenvy-security-oauth2/pom.xml
+++ b/security/codenvy-security-oauth2/pom.xml
@@ -25,15 +25,15 @@
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-commons-json</artifactId>
-            <version>${codenvy.commons.version}</version>
+            <version>${che.core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-commons-lang</artifactId>
-            <version>${codenvy.commons.version}</version>
+            <version>${che.core.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.codenvy.platform-api</groupId>
+            <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-api-auth</artifactId>
             <version>${codenvy.platform-api.version}</version>
         </dependency>
