--- a/ide/codenvy-ide-ui/pom.xml
+++ b/ide/codenvy-ide-ui/pom.xml
@@ -22,9 +22,9 @@
     <name>Codenvy :: UI</name>
     <dependencies>
         <dependency>
-            <groupId>com.codenvy.platform-api-gwt-client</groupId>
+            <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-gwt-client-commons</artifactId>
-            <version>${codenvy.platform-api-gwt-client.version}</version>
+            <version>${che.core.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.inject.extensions</groupId>
