--- a/ide/pom.xml
+++ b/ide/pom.xml
@@ -61,7 +61,7 @@
                 <plugin>
                     <groupId>org.eclipse.che.core</groupId>
                     <artifactId>codenvy-dto-maven-plugin</artifactId>
-                    <version>${codenvy.platform-api.version}</version>
+                    <version>${che.core.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
