--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,8 @@
     <modules>
         <module>commons</module>
         <module>platform-api</module>
-        <!--module>platform-api-client-gwt</module>
-        <module>ide</module>
+        <module>platform-api-client-gwt</module>
+        <!--module>ide</module>
         <module>vfs-impl</module>
         <module>security</module>
         <module>test-framework</module-->
