--- a/security/codenvy-security-oauth2/pom.xml
+++ b/security/codenvy-security-oauth2/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-api-auth</artifactId>
-            <version>${codenvy.platform-api.version}</version>
+            <version>${che.core.version}</version>
         </dependency>
 
         <dependency>
