--- a/vfs-impl/pom.xml
+++ b/vfs-impl/pom.xml
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-api-vfs</artifactId>
-            <version>${codenvy.platform-api.version}</version>
+            <version>${che.core.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
