--- a/commons/codenvy-commons-env/pom.xml
+++ b/commons/codenvy-commons-env/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-commons-lang</artifactId>
-            <version>${project.version}</version>
+            <version>${che.core.version}</version>
         </dependency>
         <!-- Test dependencies -->
         <dependency>
