--- a/commons/codenvy-commons-inject/pom.xml
+++ b/commons/codenvy-commons-inject/pom.xml
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-commons-lang</artifactId>
-            <version>${project.version}</version>
+            <version>${che.core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.everrest</groupId>
