--- a/commons/codenvy-commons-schedule/pom.xml
+++ b/commons/codenvy-commons-schedule/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-commons-inject</artifactId>
-            <version>${project.version}</version>
+            <version>${che.core.version}</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
