--- a/ide/pom.xml
+++ b/ide/pom.xml
@@ -14,11 +14,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.eclipse.che.core</groupId>
         <artifactId>che-core-parent</artifactId>
+        <groupId>org.eclipse.che.core</groupId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
-    <groupId>com.codenvy.ide</groupId>
     <artifactId>codenvy-ide-parent</artifactId>
     <packaging>pom</packaging>
     <name>Codenvy :: IDE</name>
@@ -32,29 +32,6 @@
         <module>codenvy-ide-client</module>
         <module>codenvy-ide-jseditor</module>
     </modules>
-    <scm>
-        <connection>scm:git:git@github.com:codenvy/ide.git</connection>
-        <developerConnection>scm:git:git@github.com:codenvy/ide.git</developerConnection>
-        <tag>HEAD</tag>
-    </scm>
-    <properties>
-        <dto-generator-out-directory>${project.build.directory}/generated-sources/dto/</dto-generator-out-directory>
-        <gwt.test.skip>true</gwt.test.skip>
-    </properties>
-    <repositories>
-        <repository>
-            <id>codenvy-public-repo</id>
-            <name>codenvy public</name>
-            <url>https://maven.codenvycorp.com/content/groups/public/</url>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>codenvy-public-repo</id>
-            <name>codenvy public</name>
-            <url>https://maven.codenvycorp.com/content/groups/public/</url>
-        </pluginRepository>
-    </pluginRepositories>
     <build>
         <pluginManagement>
             <plugins>
