--- a/platform-api-client-gwt/codenvy-api-analytics-gwt-client/pom.xml
+++ b/platform-api-client-gwt/codenvy-api-analytics-gwt-client/pom.xml
@@ -43,12 +43,12 @@
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-api-core-gwt-client</artifactId>
-            <version>${project.version}</version>
+            <version>${che.core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-api-core-gwt-client</artifactId>
-            <version>${project.version}</version>
+            <version>${che.core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
@@ -58,7 +58,7 @@
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-gwt-client-commons</artifactId>
-            <version>${project.version}</version>
+            <version>${che.core.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.gwt</groupId>
@@ -110,7 +110,7 @@
                     <dependency>
                         <groupId>org.eclipse.che.core</groupId>
                         <artifactId>codenvy-api-core-gwt-client</artifactId>
-                        <version>${project.version}</version>
+                        <version>${che.core.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
