--- a/platform-api-client-gwt/codenvy-api-builder-gwt-client/pom.xml
+++ b/platform-api-client-gwt/codenvy-api-builder-gwt-client/pom.xml
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-api-core-gwt-client</artifactId>
-            <version>${project.version}</version>
+            <version>${che.core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-api-project-gwt-client</artifactId>
-            <version>${project.version}</version>
+            <version>${che.core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
@@ -63,7 +63,7 @@
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-gwt-client-commons</artifactId>
-            <version>${project.version}</version>
+            <version>${che.core.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.gwt</groupId>
@@ -106,12 +106,12 @@
                     <dependency>
                         <groupId>org.eclipse.che.core</groupId>
                         <artifactId>codenvy-api-core-gwt-client</artifactId>
-                        <version>${project.version}</version>
+                        <version>${che.core.version}</version>
                     </dependency>
                     <dependency>
                         <groupId>org.eclipse.che.core</groupId>
                         <artifactId>codenvy-api-project-gwt-client</artifactId>
-                        <version>${project.version}</version>
+                        <version>${che.core.version}</version>
                     </dependency>
                 </dependencies>
                 <configuration>
