--- a/platform-api-client-gwt/codenvy-api-vfs-gwt-client/pom.xml
+++ b/platform-api-client-gwt/codenvy-api-vfs-gwt-client/pom.xml
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-gwt-client-commons</artifactId>
-            <version>${project.version}</version>
+            <version>${che.core.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.gwt</groupId>
