--- a/platform-api/codenvy-api-analytics/pom.xml
+++ b/platform-api/codenvy-api-analytics/pom.xml
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-api-core</artifactId>
-            <version>${project.version}</version>
+            <version>${che.core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
@@ -85,7 +85,7 @@
             <plugin>
                 <groupId>org.eclipse.che.core</groupId>
                 <artifactId>codenvy-dto-maven-plugin</artifactId>
-                <version>${project.version}</version>
+                <version>${che.core.version}</version>
                 <executions>
                     <execution>
                         <phase>process-sources</phase>
@@ -98,7 +98,7 @@
                     <dependency>
                         <groupId>org.eclipse.che.core</groupId>
                         <artifactId>codenvy-api-analytics</artifactId>
-                        <version>${project.version}</version>
+                        <version>${che.core.version}</version>
                         <exclusions>
                             <exclusion>
                                 <artifactId>analytics-core</artifactId>
@@ -109,7 +109,7 @@
                     <dependency>
                         <groupId>org.eclipse.che.core</groupId>
                         <artifactId>codenvy-api-core</artifactId>
-                        <version>${project.version}</version>
+                        <version>${che.core.version}</version>
                     </dependency>
                 </dependencies>
                 <configuration>
