--- a/platform-api/codenvy-api-auth/pom.xml
+++ b/platform-api/codenvy-api-auth/pom.xml
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-api-core</artifactId>
-            <version>${project.version}</version>
+            <version>${che.core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -90,7 +90,7 @@
             <plugin>
                 <groupId>org.eclipse.che.core</groupId>
                 <artifactId>codenvy-dto-maven-plugin</artifactId>
-                <version>${project.version}</version>
+                <version>${che.core.version}</version>
                 <executions>
                     <execution>
                         <phase>process-sources</phase>
@@ -103,7 +103,7 @@
                     <dependency>
                         <groupId>org.eclipse.che.core</groupId>
                         <artifactId>codenvy-api-auth</artifactId>
-                        <version>${project.version}</version>
+                        <version>${che.core.version}</version>
                     </dependency>
                 </dependencies>
                 <configuration>
