--- a/platform-api/codenvy-api-core/pom.xml
+++ b/platform-api/codenvy-api-core/pom.xml
@@ -63,7 +63,7 @@
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-dto</artifactId>
-            <version>${project.version}</version>
+            <version>${che.core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.everrest</groupId>
@@ -117,7 +117,7 @@
             <plugin>
                 <groupId>org.eclipse.che.core</groupId>
                 <artifactId>codenvy-dto-maven-plugin</artifactId>
-                <version>${project.version}</version>
+                <version>${che.core.version}</version>
                 <executions>
                     <execution>
                         <phase>process-sources</phase>
@@ -130,7 +130,7 @@
                     <dependency>
                         <groupId>org.eclipse.che.core</groupId>
                         <artifactId>codenvy-api-core</artifactId>
-                        <version>${project.version}</version>
+                        <version>${che.core.version}</version>
                     </dependency>
                 </dependencies>
                 <configuration>
