--- a/platform-api/codenvy-api-docs/pom.xml
+++ b/platform-api/codenvy-api-docs/pom.xml
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-api-core</artifactId>
-            <version>${project.version}</version>
+            <version>${che.core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
