--- a/platform-api/codenvy-dto-maven-plugin/pom.xml
+++ b/platform-api/codenvy-dto-maven-plugin/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>codenvy-dto</artifactId>
-            <version>${project.version}</version>
+            <version>${che.core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
