--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,8 @@
         <module>commons</module>
         <module>platform-api</module>
         <module>platform-api-client-gwt</module>
-        <!--module>ide</module>
-        <module>vfs-impl</module>
+        <module>ide</module>
+        <!--module>vfs-impl</module>
         <module>security</module>
         <module>test-framework</module-->
     </modules>
