--- a/security/codenvy-security-oauth2-google/pom.xml
+++ b/security/codenvy-security-oauth2-google/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>com.codenvy.security</groupId>
             <artifactId>codenvy-security-oauth2</artifactId>
-            <version>${project.version}</version>
+            <version>${che.core.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.oauth-client</groupId>
