--- a/security/codenvy-security-oauth2-projectlocker/pom.xml
+++ b/security/codenvy-security-oauth2-projectlocker/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>com.codenvy.security</groupId>
             <artifactId>codenvy-security-oauth2</artifactId>
-            <version>${project.version}</version>
+            <version>${che.core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
