--- a/security/pom.xml
+++ b/security/pom.xml
@@ -14,13 +14,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.eclipse.che.core</groupId>
         <artifactId>che-core-parent</artifactId>
+        <groupId>org.eclipse.che.core</groupId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
-    <groupId>com.codenvy.security</groupId>
     <artifactId>codenvy-security-parent</artifactId>
-    <version>1.5.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Codenvy Security :: Parent</name>
     <modules>
@@ -33,16 +32,4 @@
         <module>codenvy-security-oauth2-wso2</module>
         <module>codenvy-security-oauth2-projectlocker</module>
     </modules>
-    <scm>
-        <connection>scm:git:git@github.com:codenvy/security.git</connection>
-        <developerConnection>scm:git:git@github.com:codenvy/security.git</developerConnection>
-        <tag>HEAD</tag>
-    </scm>
-    <repositories>
-        <repository>
-            <id>codenvy-public-repo</id>
-            <name>codenvy public</name>
-            <url>https://maven.codenvycorp.com/content/groups/public/</url>
-        </repository>
-    </repositories>
 </project>
