--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,8 @@
         <module>test-framework</module>
     </modules>
     <scm>
-        <connection>scm:git:git@github.com:codenvy/core.git</connection>
-        <developerConnection>scm:git:git@github.com:codenvy/core.git</developerConnection>
+        <connection>scm:git:git@github.com:codenvy/che-core.git</connection>
+        <developerConnection>scm:git:git@github.com:codenvy/che-core.git</developerConnection>
         <tag>HEAD</tag>
         <url>https://github.com/codenvy/che-core</url>
     </scm>
