--- a/platform-api/che-core-api-dto/pom.xml
+++ b/platform-api/che-core-api-dto/pom.xml
@@ -20,7 +20,7 @@
     </parent>
     <artifactId>che-core-api-dto</artifactId>
     <packaging>jar</packaging>
-    <name>Che Core API DTO</name>
+    <name>Che Core :: API :: DTO</name>
     <properties>
         <generated.test.sources.directory>${project.build.directory}/generated-test-sources/gen</generated.test.sources.directory>
     </properties>
