--- a/che-core-test-framework/pom.xml
+++ b/che-core-test-framework/pom.xml
@@ -19,9 +19,9 @@
         <version>3.9.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>codenvy-test-framework</artifactId>
+    <artifactId>che-core-test-framework</artifactId>
     <packaging>jar</packaging>
-    <name>Codenvy Test Framework</name>
+    <name>Che Core :: Test Framework</name>
     <dependencies>
         <dependency>
             <groupId>com.googlecode.grep4j</groupId>
