--- a/che-core-vfs-impl/pom.xml
+++ b/che-core-vfs-impl/pom.xml
@@ -19,9 +19,9 @@
         <version>3.9.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>codenvy-vfs-impl</artifactId>
+    <artifactId>che-core-vfs-impl</artifactId>
     <packaging>jar</packaging>
-    <name>Codenvy Virtual File System</name>
+    <name>Che Core :: Virtual File System</name>
     <dependencies>
         <dependency>
             <groupId>commons-codec</groupId>
