--- a/commons/che-core-commons-schedule/pom.xml
+++ b/commons/che-core-commons-schedule/pom.xml
@@ -20,7 +20,7 @@
     </parent>
     <artifactId>che-core-commons-schedule</artifactId>
     <packaging>jar</packaging>
-    <name>Che Core Commons :: Scheduler service</name>
+    <name>Che Core :: Commons :: Scheduler service</name>
     <dependencies>
         <dependency>
             <groupId>com.google.guava</groupId>
