--- a/platform-api/che-core-api-docs/pom.xml
+++ b/platform-api/che-core-api-docs/pom.xml
@@ -20,7 +20,7 @@
     </parent>
     <artifactId>che-core-api-docs</artifactId>
     <packaging>jar</packaging>
-    <name>Che Core API Docs</name>
+    <name>Che Core :: API :: Docs</name>
     <dependencies>
         <dependency>
             <groupId>com.wordnik</groupId>
