--- a/platform-api/che-core-api-dto-maven-plugin/pom.xml
+++ b/platform-api/che-core-api-dto-maven-plugin/pom.xml
@@ -20,7 +20,7 @@
     </parent>
     <artifactId>che-core-api-dto-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <name>Che Core API DTO Maven Plugin</name>
+    <name>Che Core :: API :: DTO Maven Plugin</name>
     <dependencies>
         <dependency>
             <groupId>org.apache.maven</groupId>
