--- a/platform-api/che-core-api-infrastructure-local/pom.xml
+++ b/platform-api/che-core-api-infrastructure-local/pom.xml
@@ -19,7 +19,7 @@
         <version>3.9.0-SNAPSHOT</version>
     </parent>
     <artifactId>che-core-api-infrastructure-local</artifactId>
-    <name>Che Core API Local Infrastructure</name>
+    <name>Che Core :: API :: Local Infrastructure</name>
     <dependencies>
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
