--- a/platform-api/che-core-api-runner/pom.xml
+++ b/platform-api/che-core-api-runner/pom.xml
@@ -20,7 +20,7 @@
     </parent>
     <artifactId>che-core-api-runner</artifactId>
     <packaging>jar</packaging>
-    <name>Che Core API Runner</name>
+    <name>Che Core :: API :: Runner</name>
     <properties>
         <dto-generator-out-directory>${project.build.directory}/generated-sources/dto/</dto-generator-out-directory>
     </properties>
