--- a/platform-api/che-core-api-user/pom.xml
+++ b/platform-api/che-core-api-user/pom.xml
@@ -19,7 +19,7 @@
         <version>3.9.0-SNAPSHOT</version>
     </parent>
     <artifactId>che-core-api-user</artifactId>
-    <name>Che Core API User</name>
+    <name>Che Core :: API :: User</name>
     <properties>
         <dto-generator-out-directory>${project.build.directory}/generated-sources/dto/</dto-generator-out-directory>
     </properties>
