--- a/platform-api/pom.xml
+++ b/platform-api/pom.xml
@@ -21,7 +21,7 @@
     </parent>
     <artifactId>che-core-api-parent</artifactId>
     <packaging>pom</packaging>
-    <name>Che Core API Parent</name>
+    <name>Che Core :: API :: Parent</name>
     <modules>
         <module>che-core-api-dto</module>
         <module>che-core-api-dto-maven-plugin</module>
