--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,9 @@
         <module>platform-api</module>
         <module>platform-api-client-gwt</module>
         <module>ide</module>
-        <module>vfs-impl</module>
+        <module>che-core-vfs-impl</module>
         <module>security</module>
-        <module>test-framework</module>
+        <module>che-core-test-framework</module>
     </modules>
     <scm>
         <connection>scm:git:git@github.com:codenvy/che-core.git</connection>
